// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`magicLink/coach 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Your sign-in link</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Your link expires in 5 minutes.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For coaches</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Your sign-in link</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Your link expires in 5 minutes.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Sign in</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Your sign-in link",
  "text": "For coaches

Your sign-in link
Your link expires in 5 minutes.

Sign in: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;

exports[`magicLink/coachee 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Your sign-in link</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Your link expires in 5 minutes.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For you</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Your sign-in link</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Your link expires in 5 minutes.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Sign in</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Your sign-in link",
  "text": "For you

Your sign-in link
Your link expires in 5 minutes.

Sign in: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;

exports[`resetPassword/coach 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Reset your password</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Your reset link expires in 15 minutes.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For coaches</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Reset your password</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Your reset link expires in 15 minutes.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Reset password</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Reset your password",
  "text": "For coaches

Reset your password
Your reset link expires in 15 minutes.

Reset password: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;

exports[`resetPassword/coachee 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Reset your password</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Your reset link expires in 15 minutes.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For you</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Reset your password</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Your reset link expires in 15 minutes.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Reset password</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Reset your password",
  "text": "For you

Reset your password
Your reset link expires in 15 minutes.

Reset password: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;

exports[`verifyEmail/coach 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Verify your email</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Confirm your email to start your next chapter.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For coaches</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Verify your email</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Confirm your email to start your next chapter.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Verify email</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Verify your email",
  "text": "For coaches

Verify your email
Confirm your email to start your next chapter.

Verify email: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;

exports[`verifyEmail/coachee 1`] = `
{
  "html": "<!doctype html>
<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<meta name="x-apple-disable-message-reformatting">
<meta name="color-scheme" content="light only">
<meta name="supported-color-schemes" content="light only">
<title>Verify your email</title>
<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch></o:OfficeDocumentSettings></xml><![endif]-->
<style>
  :root { color-scheme: light only; supported-color-schemes: light only; }
  body { margin:0; padding:0; width:100% !important; -webkit-font-smoothing:antialiased; }
  a { text-decoration:none; }
  @media (max-width:600px) {
    .gutter { padding-left:24px !important; padding-right:24px !important; }
    .display { font-size:34px !important; }
  }
</style>
</head>
<body style="margin:0;padding:0;background:#F5F4EF;color:#1D4533;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;mso-hide:all">Confirm your email to start your next chapter.</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F4EF">
<tr><td align="center" class="gutter" style="padding:40px 32px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:520px;text-align:left">
<tr><td><img src="http://localhost:3000/brand/wordmark.png" alt="HolPro" height="34" style="display:block;height:34px;width:auto;border:0"></td></tr>
<tr><td style="height:36px;line-height:36px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:14px;font-weight:600;letter-spacing:.12em;text-transform:uppercase;color:#CA6728">For you</td></tr>
<tr><td style="height:12px;line-height:12px;font-size:0">&nbsp;</td></tr>
<tr><td class="display" style="font-family:'Instrument Serif',Georgia,serif;font-weight:400;font-size:42px;line-height:1.05;letter-spacing:-.01em;color:#1D4533">Verify your email</td></tr>
<tr><td style="height:16px;line-height:16px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:17px;line-height:1.6;color:#1D4533">Confirm your email to start your next chapter.</td></tr>
<tr><td style="height:28px;line-height:28px;font-size:0">&nbsp;</td></tr>
<tr><td>
<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://holpro.app/link?token=abc&amp;next=home" style="height:52px;v-text-anchor:middle;width:220px" arcsize="50%" stroke="f" fillcolor="#1D4533"><w:anchorlock/><center style="color:#F5F4EF;font-family:Arial,sans-serif;font-size:16px;font-weight:600"><![endif]-->
<a href="https://holpro.app/link?token=abc&amp;next=home" style="display:inline-block;background:#1D4533;color:#F5F4EF;font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:16px;font-weight:600;line-height:20px;padding:16px 28px;border-radius:999px;mso-padding-alt:0;text-decoration:none">Verify email</a>
<!--[if mso]></center></v:roundrect><![endif]-->
</td></tr>
<tr><td style="height:32px;line-height:32px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If the button does not work, copy this link into your browser.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#1D4533;overflow-wrap:anywhere;word-break:break-word"><a href="https://holpro.app/link?token=abc&amp;next=home" style="color:#1D4533;text-decoration:none">https://holpro.app/link?token=abc&amp;next=home</a></td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="height:1px;line-height:1px;font-size:0;background:#CED5CD">&nbsp;</td></tr>
<tr><td style="height:20px;line-height:20px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">If you did not request this, ignore this email.</td></tr>
<tr><td style="height:8px;line-height:8px;font-size:0">&nbsp;</td></tr>
<tr><td style="font-family:Manrope,system-ui,-apple-system,'Segoe UI',Arial,sans-serif;font-size:13px;line-height:1.5;color:#5E7A6B">HolPro &mdash; Unlock yourself.</td></tr>
</table>
</td></tr>
</table>
</body>
</html>",
  "subject": "Verify your email",
  "text": "For you

Verify your email
Confirm your email to start your next chapter.

Verify email: https://holpro.app/link?token=abc&next=home

If you did not request this, ignore this email.

HolPro — Unlock yourself.",
}
`;
